--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,9 @@
 			<feature name="Launcher">
 				<param name="android-package" value="com.hutchind.cordova.plugins.launcher.Launcher" />
 			</feature>
+			<queries>
+        		<package android:name="com.instagram.android"/>
+			</queries>
 		</config-file>
 		<source-file src="src/android/Launcher.java" target-dir="src/com/hutchind/cordova/plugins/launcher" />
 		<source-file src="src/android/ParseTypes.java" target-dir="src/com/hutchind/cordova/plugins/launcher" />
