--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,8 @@
 			<feature name="Launcher">
 				<param name="android-package" value="com.hutchind.cordova.plugins.launcher.Launcher" />
 			</feature>
+		</config-file>
+		<config-file target="AndroidManifest.xml" parent="/manifest">
 			<queries>
         		<package android:name="com.instagram.android"/>
 			</queries>
